Web Inspector: fix DRT to deliver simulated events to devtools front-end https://bugs.webkit.org/show_bug.cgi?id=106650

Patch by Andrey Lushnikov <lushnikov@chromium.org> on 2013-01-14
Reviewed by Pavel Feldman.

Add separated m_devToolsTestInterfaces object to testShell which is
bind to devTools webview.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::initialize):
(TestShell::createMainWindow):
(TestShell::~TestShell):
(TestShell::showDevTools):
(TestShell::resetTestController):
(TestShell::bindJSObjectsToWindow):
(TestShell::createNewWindow):
* DumpRenderTree/chromium/TestShell.h:
(TestShell):

Canonical link: https://commits.webkit.org/125013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139606 268f45cc-cd09-0410-ab3c-d52691b4dbfc